--- a/.cproject
+++ b/.cproject
@@ -95,6 +95,8 @@
                             							
                             <option id="ilg.gnuarmeclipse.managedbuild.cross.option.addtools.createlisting.2079684318" name="Create extended listing" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.addtools.createlisting"/>
                             							
+                            <option id="ilg.gnuarmeclipse.managedbuild.cross.option.target.other.2024389474" name="Other target flags" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.target.other" value="" valueType="string"/>
+                            							
                             <targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="ilg.gnuarmeclipse.managedbuild.cross.targetPlatform.1957477972" isAbstract="false" osList="all" superClass="ilg.gnuarmeclipse.managedbuild.cross.targetPlatform"/>
                             							
                             <builder buildPath="${workspace_loc:/WONDER_TEST}/Debug" id="ilg.gnuarmeclipse.managedbuild.cross.builder.94083690" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="ilg.gnuarmeclipse.managedbuild.cross.builder"/>
@@ -118,6 +120,8 @@
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.defs.1091768930" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.assembler.defs" useByScannerDiscovery="true" valueType="definedSymbols">
                                     									
                                     <listOptionValue builtIn="false" value="DEBUG"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="MIN_BACKLIGHT_VALUE=100"/>
                                     									
                                     <listOptionValue builtIn="false" value="LANG_CZ"/>
                                     									
@@ -162,6 +166,8 @@
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs.1302744698" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.c.compiler.defs" useByScannerDiscovery="false" valueType="definedSymbols">
                                     									
                                     <listOptionValue builtIn="false" value="DEBUG"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="MIN_BACKLIGHT_VALUE=100"/>
                                     									
                                     <listOptionValue builtIn="false" value="LANG_CZ"/>
                                     									
@@ -214,6 +220,8 @@
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.defs.1869391286" name="Defined symbols (-D)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.cpp.compiler.defs" useByScannerDiscovery="false" valueType="definedSymbols">
                                     									
                                     <listOptionValue builtIn="false" value="DEBUG"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="MIN_BACKLIGHT_VALUE=100"/>
                                     									
                                     <listOptionValue builtIn="false" value="LANG_CZ"/>
                                     									
@@ -813,13 +821,13 @@
                                     									
                                     <listOptionValue builtIn="false" value="DEBUG"/>
                                     									
+                                    <listOptionValue builtIn="false" value="SVS_RND_FUNCTION=&quot;svp_random()&quot;"/>
+                                    									
                                     <listOptionValue builtIn="false" value="SYSCALL_WRAPPERS=24"/>
                                     									
                                     <listOptionValue builtIn="false" value="LANG_EN"/>
                                     									
                                     <listOptionValue builtIn="false" value="TOUCH_USE_BATTERY_MEASUREMENT"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="MIN_BACKLIGHT_VALUE=140"/>
                                     									
                                     <listOptionValue builtIn="false" value="SVS_USE_PLATFORM_SPECIFIC"/>
                                     									
@@ -857,13 +865,13 @@
                                     									
                                     <listOptionValue builtIn="false" value="DEBUG"/>
                                     									
+                                    <listOptionValue builtIn="false" value="SVS_RND_FUNCTION=&quot;svp_random()&quot;"/>
+                                    									
                                     <listOptionValue builtIn="false" value="SYSCALL_WRAPPERS=24"/>
                                     									
                                     <listOptionValue builtIn="false" value="LANG_EN"/>
                                     									
                                     <listOptionValue builtIn="false" value="TOUCH_USE_BATTERY_MEASUREMENT"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="MIN_BACKLIGHT_VALUE=140"/>
                                     									
                                     <listOptionValue builtIn="false" value="SVS_USE_PLATFORM_SPECIFIC"/>
                                     									
@@ -915,9 +923,9 @@
                                     									
                                     <listOptionValue builtIn="false" value="TOUCH_USE_BATTERY_MEASUREMENT"/>
                                     									
-                                    <listOptionValue builtIn="false" value="MIN_BACKLIGHT_VALUE=140"/>
-                                    									
                                     <listOptionValue builtIn="false" value="PPM_SUPPORT_ENABLED"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="SVS_RND_FUNCTION=&quot;svp_random()&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="SVS_USE_PLATFORM_SPECIFIC"/>
                                     									
